create sprint definitions + minor refactoring
